Stop program icons shrinking when text overflows
Fixes creativecommons/creativecommons.org#303

--- a/cc/css/app.css
+++ b/cc/css/app.css
@@ -2459,13 +2459,22 @@ h1.entry-title {
                 -ms-flex: 0 1 40%;
                     flex: 0 1 40%; } }
         .our-programs .inner-list ul li img {
-          height: 100%; }
+          display: block;
+          width: 77px;
+          height: auto;
+          -webkit-flex-shrink: 0;
+              -ms-flex-negative: 0;
+                  flex-shrink: 0; }
         .our-programs .inner-list ul li .program-title {
           display: block;
           color: white;
           font-weight: bold;
           font-size: 2.8rem;
-          margin-left: 30px; }
+          margin-left: 30px;
+          -webkit-box-flex: 1;
+          -webkit-flex-grow: 1;
+              -ms-flex-positive: 1;
+                  flex-grow: 1; }
 
 .author-wrapper {
   margin-bottom: 20px; }
